--- a/templates/blog/index.ejs
+++ b/templates/blog/index.ejs
@@ -56,7 +56,7 @@
   <!-- Arrow -->
   <div class="blankHXS"></div>
   <div class="wrapper">
-
+    <a href="https://www.linkedin.com/posts/skills-user-experience-design_have-you-ever-faced-resistance-from-stakeholders-ugcPost-7173388777111863296-OIP6?utm_source=share&utm_medium=member_desktop" class="textUnderline" title="Nature & Wildlife"> Photography </a>
 
 
     <div class="Grid Grid--full Grid--gutters">
