--- a/html/main.css
+++ b/html/main.css
@@ -5952,20 +5952,15 @@ button.intro:hover {
                 #0000 calc(100% - 5px));
     }
 }
-
-/* =================== Logo Carousel Blur  ===================*/
 /* =================== video  ===================*/
-
+.videoImg{
+    position: absolute;
+}
 
 .video-container {
     width: 100%;
     position: relative;
     background: #4cf455;
-    justify-content: center;
-    align-items: center;
-
-
-
 }
 
 .video {
@@ -5985,27 +5980,35 @@ button.intro:hover {
 
 
 .controls {
-    display: flex;
     position: absolute;
-    bottom: 0;
+    bottom: 12px;
     width: 100%;
-    height: 100;
+    display: flex;
+    justify-content: center;
     flex-wrap: wrap;
-    background: var(--White-transparent);
     transition: all .2s;
 
 }
 
-.playButtons {
-    background: var(--white);
+.playerButtonStyle {
     margin: 6px;
     padding: 4px;
-    width: 32px;
-    height: 32px;
+    width: 2em;
+    height: 2em;
+    border-radius: var(--border-radiusMax);
+    background: var(--White-transparent);
+    transition: all .2s;
+}
+
+.playButtons {
+
+    background: var(--white);
+
     display: flex;
+    position: relative;
     justify-content: center;
     align-items: center;
-    border-radius: var(--border-radiusMax);
+
 
 }
 
@@ -6016,28 +6019,26 @@ button.intro:hover {
 
 .playButtons button:before {
     content: url('icon/play.svg');
-    display: inline-block;
-    justify-content: center;
-    align-items: center;
+
 }
 
 .playButtons button.play::before {
     content: url('icon/play.svg');
-
-
 }
 
 .playButtons button.pause::before {
     content: url('icon/pause.svg');
+    display: flex;
+
 
 }
 
-.barContainer {
+.videoBarContainer {
     bottom: 0;
 }
 
-.bar {
-    height: px;
+.videoBar {
+    height: 4px;
     top: 0;
     left: 0;
     width: 100%;
@@ -6045,11 +6046,12 @@ button.intro:hover {
     padding: 0;
 }
 
-.barColor {
-    height: 10px;
+.videoBarColor {
+    height: 4px;
     background-color: #ff8c00;
 
 
 }
 
 /* =================== video  ===================*/
+/* =================== Logo Carousel Blur  ===================*/
