--- a/templates/resume/index.ejs
+++ b/templates/resume/index.ejs
@@ -97,7 +97,7 @@
               <h5>Learn JavaScript</h5>
 
               <br>
-              <h6 class="textItalic"> March 2023 - Present</h6>
+              <h6 class="textItalic"> June 2023</h6>
 
               <h5>Front-End Engineer </h5>
             </div>
@@ -175,7 +175,7 @@
             <div class="element">
 
               <h5><strong>LASO Health | Product Designer </strong></h5>
-              <h6 class="textItalic">Sep. 2023 - Jan. 2024, Contractor</h6>
+              <h6 class="textItalic">Sep. 2023 - Jan. 2024, Part-time Contractor</h6>
               <div class="blankHXXS"></div>
 
 
@@ -196,7 +196,7 @@
             </div>
             <div class="element">
               <h5><strong>Modernized Mobile LLC | UX Designer </strong></h5>
-              <h6 class="textItalic">June. 2023 - Aug.2023, Contractor</h6>
+              <h6 class="textItalic">June. 2023 - Aug.2023, Part-time Contractor</h6>
               <div class="blankHXXS"></div>
 
               <ul>
