--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -53,7 +53,7 @@
     </div>
   </div>
 
-  <div class="Grid Grid--gutters Grid--cols-8 u-textCenter Grid--center">
+  <div class="Grid Grid--gutters Grid--cols-8 ">
     <div class="Grid-cell">
       <div class="ClipboardBoxIconOnly">
         <button class="ClipboardIconOnly">
