--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -22,28 +22,29 @@
     </div>
   </div>
 
-<div class="wrapper">
-  <div class="Grid Grid--gutters">
-    <div class="Grid-cell">
-      <div class="row">
-        <div class="widthMax">
-          <div class="element">
-            <strong>
-              <div class="intro aos-init aos-animate" data-aos="fade-up">           
-                <h1> I'm a UX Designer passionate about creating simple, smooth and engaging experiences. </h1>
-              </div>
-            </strong>
+  <div class="wrapper">
+    <div class="Grid Grid--gutters">
+      <div class="Grid-cell">
+        <div class="row">
+          <div class="widthMax">
+            <div class="element">
+              <strong>
+                <div class="intro aos-init aos-animate" data-aos="fade-up">
+                  <h1> I'm a UX Designer passionate about creating simple, smooth and engaging experiences. </h1>
+                </div>
+              </strong>
+            </div>
           </div>
-        </div>
-        <div class="paddingleft">
-          <div class="element">
-            <div class="widthFitContent">
-              <div class="dropdownSM">
-                <img title="Share" class="iconS hoverGrey300 paddingM borderRadiusMax dropbtn" src="/icon/share.svg" alt="Share">
-                <div class="dropdownSM-content">
-                  <a href="https://www.linkedin.com/sharing/share-offsite/?url=https://vickywang.me" target="_blank">Share
-                    on LinkedIn</a>
-                  <a href="https://pinterest.com/pin/create/button/?url=https://vickywang.me&amp;media=https://s3.us-west-1.amazonaws.com/vickywang.me/Thumbnails/vickywang_mobile.svg&amp;description=Skilled%20UX%20Designer%20for%20B2B%20Solutions%20%26%20Consumer%20Apps%20-%20Vicky%20Wang" target="_blank">Share on Pinterest</a>
+          <div class="paddingleft">
+            <div class="element">
+              <div class="widthFitContent">
+                <div class="dropdownSM">
+                  <img title="Share" class="iconS hoverGrey300 paddingM borderRadiusMax dropbtn" src="/icon/share.svg" alt="Share">
+                  <div class="dropdownSM-content">
+                    <a href="https://www.linkedin.com/sharing/share-offsite/?url=https://vickywang.me" target="_blank">Share
+                      on LinkedIn</a>
+                    <a href="https://pinterest.com/pin/create/button/?url=https://vickywang.me&amp;media=https://s3.us-west-1.amazonaws.com/vickywang.me/Thumbnails/vickywang_mobile.svg&amp;description=Skilled%20UX%20Designer%20for%20B2B%20Solutions%20%26%20Consumer%20Apps%20-%20Vicky%20Wang" target="_blank">Share on Pinterest</a>
+                  </div>
                 </div>
               </div>
             </div>
@@ -51,54 +52,55 @@
         </div>
       </div>
     </div>
-  </div>
 
-  <div class="Grid Grid--gutters Grid--cols-8 ">
-    <div class="Grid-cell">
-      <div class="ClipboardBoxIconOnly">
-        <button class="ClipboardIconOnly">
-          <img title="Copy Email to Clipboard" class="iconM hoverGrey300 paddingMax borderRadiusMax" src="./icon/mail.svg" alt="LinkedIn">
-          <p class="clickIconCopy">vickyw.design@gmail.com</p>
-        </button>
+    <div class="Grid Grid--gutters Grid--cols-8 ">
+      <div class="Grid-cell">
+        <div class="ClipboardBoxIconOnly">
+          <button class="ClipboardIconOnly">
+            <img title="Copy Email to Clipboard" class="iconM hoverGrey300 paddingMax borderRadiusMax" src="./icon/mail.svg" alt="LinkedIn">
+            <p class="clickIconCopy">vickyw.design@gmail.com</p>
+          </button>
+        </div>
+
+      </div>
+      <div class="Grid-cell">
+        <a href="https://www.linkedin.com/in/vicky-wyq/" target="_blank" title="LinkedIn">
+          <img class="iconM hoverGrey300 paddingMax borderRadiusMax borderRadiusS" src="./icon/in.svg" alt="LinkedIn">
+        </a>
       </div>
 
-    </div>
-    <div class="Grid-cell">
-      <a href="https://www.linkedin.com/in/vicky-wyq/" target="_blank" title="LinkedIn">
-        <img class="iconM hoverGrey300 paddingMax borderRadiusMax borderRadiusS" src="./icon/in.svg" alt="LinkedIn">
-      </a>
+      <div class="Grid-cell">
+        <a href="https://github.com/vicky-wyq" target="_blank" title="GitHub">
+          <img class="iconM hoverGrey300 paddingMax borderRadiusMax" src="./icon/git.svg" alt="GitHub">
+        </a>
+      </div>
+      <div class="Grid-cell">
+        <a href="https://codepen.io/vicky-wyq" target="_blank" title="CodePen">
+          <img class="iconM hoverGrey300 paddingMax borderRadiusMax" src="./icon/Codepen.svg" alt="CodePen">
+        </a>
+      </div>
+      <div class="Grid-cell">
+      </div>
+      <div class="Grid-cell">
+      </div>
+      <div class="Grid-cell">
+      </div>
+      <div class="Grid-cell">
+      </div>
+      <div class="Grid-cell">
+      </div>
+      <div class="Grid-cell">
+      </div>
+      <div class="Grid-cell">
+      </div>
+      <div class="Grid-cell">
+      </div>
     </div>
 
-    <div class="Grid-cell">
-      <a href="https://github.com/vicky-wyq" target="_blank" title="GitHub">
-        <img class="iconM hoverGrey300 paddingMax borderRadiusMax" src="./icon/git.svg" alt="GitHub">
-      </a>
-    </div>
-    <div class="Grid-cell">
-      <a href="https://codepen.io/vicky-wyq" target="_blank" title="CodePen">
-        <img class="iconM hoverGrey300 paddingMax borderRadiusMax" src="./icon/Codepen.svg" alt="CodePen">
-      </a>
-    </div>
-    <div class="Grid-cell">
-    </div>
-    <div class="Grid-cell">
-    </div>
-    <div class="Grid-cell">
-    </div>
-    <div class="Grid-cell">
-    </div>
-    <div class="Grid-cell">
-    </div>
-    <div class="Grid-cell">
-    </div>
-    <div class="Grid-cell">
-    </div>
-    <div class="Grid-cell">
-    </div>
   </div>
-
-</div>
   <div class="wrapper">
+
+
     <div class="Grid Grid--gutters Grid--cols-3">
       <a href="/resume" target="_blank"> <button class="buttonLanding arrButtonResume">Resume &nbsp;
         </button></a>
@@ -111,7 +113,20 @@
   <!-- Arrow -->
   <!-- Content -->
   <div class="wrapper">
+    <div class="Grid Grid--gutters Grid--cols-3">
+
+      <%- include(`${templatePath}/shared/block_cardnPassword`, {
+        cardPwID:`booking_management`,
+        hoverBorderColor:`BYP`,
+        inputColor:`PWinput`,
+        cardPwImgURL:`${websitePath}/projectImages/Cover_BYP_ApptManagement.png`,
+        cardPwTitle: `Enhancing Appointment Management for BookYourPet SaaS Platform`, 
+        cardPwDescription:`I led the redesign of the appointment details screen for a pet booking app, aiming to improve usability, streamline management, and enhance efficiency. Using user interviews, usability testing, and data analysis, we identified key areas for improvement: easier navigation, better visibility of pet and client info, and efficient appointment adjustments. The redesigned screen features simplified navigation, enhanced visual hierarchy, and quick-access management tools, resulting in a 30% increase in user satisfaction and a 40% reduction in time spent managing appointments. This case study highlights my ability to solve complex usability issues and deliver impactful design solutions.` 
+        }) %>
+    </div>
+
     <div class="Grid Grid--gutters Grid--cols-2">
+
 
       <%- include(`${templatePath}/shared/block_cardnPassword`, {
         cardPwID:`onboardingSubscription`,
@@ -127,7 +142,7 @@
         inputColor:`PWinput`,
         cardPwImgURL:`${websitePath}/projectImages/Cover_BYP_AppB2B_Redesign.png`,
         cardPwTitle: `B2B SaaS Booking App Revamp: The Transition from White-Glove to Self-Service`, 
-        cardPwDescription:`Discover how we transformed the BookYourPet app with a strategic redesign, shifting from a white-glove service to a user-friendly self-service platform. This overhaul focused on enhancing key features, resulting in a significant 45% increase in user satisfaction and a more streamlined experience for pet owners. Join us on our journey to revolutionize pet care services with a seamless and intuitive booking experience.
+        cardPwDescription:`Discover how we transformed the pet booking app with a strategic redesign, shifting from a white-glove service to a user-friendly self-service platform. This overhaul focused on enhancing key features, resulting in a significant 45% increase in user satisfaction and a more streamlined experience for pet owners. Join us on our journey to revolutionize pet care services with a seamless and intuitive booking experience.
       ` 
         }) %>
     </div>
@@ -142,7 +157,7 @@
         cardPwDescription:`Improving the consumer booking flow within a dynamic service platform. Our mission was to identify and alleviate pain points in the existing booking process, with a goal to substantially elevate user engagement and increase conversion rates.` 
         }) %>
         -->
-        <%- include(`${templatePath}/shared/block_cardnPassword`, {
+      <%- include(`${templatePath}/shared/block_cardnPassword`, {
 
           cardPwID:`rxZero`,
           hoverBorderColor:`LASO`,
@@ -182,10 +197,8 @@
 
 
     </div>
-    <div class="Grid Grid--gutters Grid--full">
 
-    </div>
-    <div class="Grid Grid--gutters Grid--cols-3">
+    <div class="Grid Grid--gutters Grid--cols-2">
 
       <%- include(`${templatePath}/shared/block_cardNoPassword`, {
         hoverBorderColor:`SEER`,
