--- a/templates/appointa/index.ejs
+++ b/templates/appointa/index.ejs
@@ -15,7 +15,7 @@
   }) %>  
   
   <%- include(`${templatePath}/shared/block_nav_header`, {
-    type:'back', 
+    type:'backText', 
     leftArrowColor:`APPOINTA`,
     currentPage: 'PROJECT',
     PageUrl:`/`
