--- a/templates/design_system/navigation/V3/index.ejs
+++ b/templates/design_system/navigation/V3/index.ejs
@@ -10,7 +10,7 @@ pageURL:'design_system/navigation/V3/', thumbnailImgURL: 'vickywang_web.png'
 <body>
   <%- include(`${templatePath}/shared/compProgressBar`) %>
   <%- include(`${templatePath}/shared/block_nav_header`, {
-    type:'back', 
+    type:'backText', 
     currentPage: 'PROJECT',
     PageUrl:`/design_system/navigation`
     }) %>
