--- a/templates/glorify/index.ejs
+++ b/templates/glorify/index.ejs
@@ -15,11 +15,13 @@
     barColor:`GLORIFY`
   }) %>
   <%- include(`${templatePath}/shared/block_nav_header`, {
-    type:'back', 
+    type:'backText', 
     leftArrowColor:`GLORIFY`,
     currentPage: 'PROJECT',
     PageUrl:`/`
     }) %>
+
+
 
   <!-- Working process -->
   <div class="colorBgGLORIFY">
