--- a/templates/resume/index.ejs
+++ b/templates/resume/index.ejs
@@ -133,7 +133,7 @@
               <h5> jQuery</h5>
 
 
-              <h5> JavaScript, EJS(Embedded JavaScript templates), jQuery </h5>
+              <h5> JavaScript, EJS(Embedded JavaScript templates) </h5>
 
             </div>
             <div class="element">
