--- a/templates/seer/index.ejs
+++ b/templates/seer/index.ejs
@@ -15,7 +15,7 @@
     barColor:`SEER`
   }) %>
   <%- include(`${templatePath}/shared/block_nav_header`, {
-    type:'back', 
+    type:'backText', 
     leftArrowColor:`SEER`,
 
     currentPage: 'PROJECT',
