--- a/templates/design_system/index.ejs
+++ b/templates/design_system/index.ejs
@@ -14,7 +14,7 @@ pageURL:'design_system', thumbnailImgURL: 'vickywang_web.png'
 
   <%- include(`${templatePath}/shared/compProgressBar`) %>
   <%- include(`${templatePath}/shared/block_nav_header`, {
-    type:'main', 
+    type:'backText', 
     currentPage: 'PROJECT',
     PageUrl:`/`
     }) %>
