--- a/templates/architecture/index.ejs
+++ b/templates/architecture/index.ejs
@@ -14,7 +14,7 @@
     type:'backText', 
     leftArrowColor:``,
     currentPage: 'ARCHITECTURE',
-    PageUrl:`/about`
+    PageUrl:`/`
     }) %>
   <div class="blankHM"></div>
   <%- include(`${templatePath}/shared/base_greeting`,{greetingTxt:`👋🏻 hi there!`}) %>
