--- a/templates/photography/index.ejs
+++ b/templates/photography/index.ejs
@@ -13,7 +13,7 @@
     type:'backText', 
     leftArrowColor:``,
     currentPage: 'PHOTOGRAPHY',
-    PageUrl:`/about`
+    PageUrl:`/`
     }) %>  <div class="blankHM"></div>
   <%- include(`${templatePath}/shared/base_greeting`,{greetingTxt:`👋🏻 hi there!`}) %>
 
